# AsimNexus

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .stylelintrc.json  ARCHITECTURE.md  ASIMNEXUS_UNIFIED.md  ASIM_INTEGRATION_STATUS.md  Bible.md  CHAT_FIXED.md  CLAUDE.md  COMPLETE_AUDIT.md  CONSTITUTION.md  CONTRIBUTING.md  DEVELOPER_SETUP.md  DOCKER_READY.md  Dockerfile  FILE_EXECUTION_PLAN.md  FINAL_CLEAN.md  FINAL_MERGE_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FOLDER_MERGE_SUMMARY.md  GOVERNMENT_COMPLIANCE_PLAN.md  GO_LIVE_ROADMAP.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE-GOV  LICENSE-PERSONAL-OS  LICENSE-PRIVATE  PROTOTYPE_GUIDE.md  PROTOTYPE_LAUNCHER.py  README.md  README_backup.md  RUN_ASIMNEXUS.md  STATUS.md  TECHNICAL_SPECIFICATION.md  (+73 more)
.github/: INTERFACE_FREEZE.md  RELEASE_FREEZE.md  dependabot.yml
.plans/: 00_master_index.md  01_vision_philosophy.md  02_government_ecosystem.md  03_company_ecosystem.md  04_citizen_ecosystem.md  05_education_ecosystem.md  06_health_culture_geography_security.md  07_nexus_connector.md  08_chat_management.md  09_evolution_engine.md  10_implementation_phases.md  11_file_structure.md  12_permission_system.md  13_summary.md  master_summary.md  roadmap_nepal_ecosystem.md
DigitalNepal-backend/: Dockerfile.backend  README.md  app.py  docker-compose.yml  ecosystem_integration.py  frontend_api.js  k8s-deployment.yaml  nexus_core.py  requirements.txt
desktop/tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src/: main.rs
(+3281 files in other folders)
