[package]
name = "asimnexus-desktop"
version = "2.0.0"
description = "ASIMNEXUS World OS Desktop Application"
authors = ["AsimNexus Team"]
license = "AGPL-3.0"
repository = "https://github.com/asimnexus/asimnexus"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
notify = "6.0"
auto-launch = "0.5"
window-shadows = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
